Add about text.

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by an Udemy Course. It uses data from mapbox.com and weatherstack.com. </p>
         <img src="/img/marc.png" alt="Marc" class="portrait">
     </div>
     {{>footer}}
